--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         const JSON_FILE_NAME = 'engaqus.json';
         
         // --- DİKKAT: Python script'inin oluşturduğu ses klasörünün adını buraya yazın! ---
-        const AUDIO_FOLDER_NAME = 'audious';
+        const AUDIO_FOLDER_NAME = 'audios';
 
 
         // --- Fonksiyonlar ---
